sshのホストの追加

--- a/.ssh/config
+++ b/.ssh/config
@@ -11,6 +11,14 @@ Host dali
 	User boro
 	AddressFamily inet
 
+Host buppin2
+	HostName buppin2.ht.sfc.keio.ac.jp
+	User htroot
+
+Host melchior
+	HostName melchior.ht.sfc.keio.ac.jp
+	User htroot
+
 Host life-cloud
 	HostName life-cloud.ht.sfc.keio.ac.jp
 	User boro
