--- a/.ssh/config
+++ b/.ssh/config
@@ -1,9 +1,5 @@
 Host robin
-	HostName boronngo.ddo.jp
-	User boro
-
-Host robin-local
-	HostName 192.168.0.3
+	HostName boronngo.dip.jp
 	User boro
 
 Host dali
