--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -50,6 +50,8 @@
 	<false/>
 	<key>HideActivityIndicator</key>
 	<false/>
+	<key>HideMenuBarInFullscreen</key>
+	<true/>
 	<key>HideScrollbar</key>
 	<false/>
 	<key>HideTab</key>
@@ -125,9 +127,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>392 85 445 270 0 0 1366 746 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>562 54 924 485 0 0 1366 746 </string>
+	<string>370 204 924 485 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>683 290 650 451 0 0 1366 746 </string>
+	<string>716 242 650 451 0 0 1366 745 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>0 6 682 740 0 0 1366 746 </string>
 	<key>New Bookmarks</key>
@@ -1643,13 +1645,11 @@
 	<key>SUEnableAutomaticChecks</key>
 	<true/>
 	<key>SUFeedURL</key>
-	<string>http://iterm2.googlecode.com/svn/trunk/appcasts/testing.xml</string>
+	<string>http://iterm2.com/appcasts/testing.xml</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-05-08T07:39:57Z</date>
-	<key>SUSkippedVersion</key>
-	<string>1.0.0.20130622</string>
+	<date>2014-10-19T04:20:35Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1683,7 +1683,7 @@
 	<key>WebKitDefaultFontSize</key>
 	<integer>11</integer>
 	<key>WebKitStandardFont</key>
-	<string>Lucida Grande</string>
+	<string>.Helvetica Neue DeskInterface</string>
 	<key>WindowNumber</key>
 	<true/>
 	<key>WindowStyle</key>
@@ -1695,6 +1695,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>1.0.0.20130319</string>
+	<string>1.0.0.20140629</string>
 </dict>
 </plist>
