--- a/.ssh/config
+++ b/.ssh/config
@@ -22,3 +22,8 @@ Host life-cloud
 Host life-cloud-dev
 	HostName life-cloud-dev.ht.sfc.keio.ac.jp
 	User boro
+
+Host life-cloud-hv
+	HostName life-cloud-hv.ht.sfc.keio.ac.jp
+	User boro
+
