--- a/.ssh/config
+++ b/.ssh/config
@@ -27,3 +27,7 @@ Host life-cloud-hv
 	HostName life-cloud-hv.ht.sfc.keio.ac.jp
 	User boro
 
+Host vinci
+	HostName vinci.ht.sfc.keio.ac.jp
+	User boro
+
