tmuxのタイトルを変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,5 @@
+set-option -g set-titles on
+set-option -g set-titles-string "#(whoami)@#h"
+
 set-window-option -g status-right "%Y-%m-%d %H:%M"
 set-window-option -g window-status-current-fg blue
