--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
 set-option -g set-titles on
 set-option -g set-titles-string "#(whoami)@#h"
 
-set-window-option -g status-right "%Y-%m-%d %H:%M"
+set-window-option -g status-right "#h %Y-%m-%d %H:%M"
+set-window-option -g status-left-bg colour083
+set-window-option -g status-right-bg colour117
+set-window-option -g status-bg colour195
 set-window-option -g window-status-current-fg blue
